--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
       matrix:
         go-version: [1.18.x]
         goos: [linux]
-        goarch: [x86]
+        goarch: [amd64]
     runs-on: ubuntu-latest
     steps:
     - name: Install go
